--- a/1.0/demo/index.html
+++ b/1.0/demo/index.html
@@ -37,7 +37,7 @@
 </div>
 <script>
     var S = KISSY;
-	S.Config.debug = true;
+	//S.Config.debug = true;
     if (S.Config.debug) {
         var srcPath = "../../../";
         S.config({
@@ -60,8 +60,7 @@
 				to: 270
 			},
 			expanded: true,
-			expandWay: "stepByStep",
-			delay: 200,
+			expandWay: "stepBySte,
 			toggle: true,
 			radius: 150
 		});
@@ -95,3 +94,4 @@
 </script>
 </body>
 </html>
+	S.Config.debug = true;
