修复误操作bug

--- a/1.0/demo/index.html
+++ b/1.0/demo/index.html
@@ -37,7 +37,7 @@
 </div>
 <script>
     var S = KISSY;
-	//S.Config.debug = true;
+	S.Config.debug = true;
     if (S.Config.debug) {
         var srcPath = "../../../";
         S.config({
@@ -60,7 +60,7 @@
 				to: 270
 			},
 			expanded: true,
-			expandWay: "stepBySte,
+			expandWay: "stepByStep",
 			toggle: true,
 			radius: 150
 		});
@@ -94,4 +94,3 @@
 </script>
 </body>
 </html>
-	S.Config.debug = true;
